- edge -

v0.4.2
2009-09-11
Fix: the API call (at the JavaScript side) was ignoring the callback parameter.
Impr: if the array of API points is empty, it's not added into js_config anymore.
New: new testing widgets in netzke_controller.
Fix: extra CSS includes now take effect.
New: Support for masquerading as "World". In this mode all the "touched" persistent preferences will be overwritten for all roles and users.

v0.4.1
2009-09-06
Version bumb to force github rebuild the gem (Manifest is now included)

v0.4.0
2009-09-05
Major refactoring.

v0.3.2
2009-06-05
Netzke doesn't overwrite session[:user] anymore to not cause authentication-related problems.

v0.3.1
2009-05-07
Fix: persistent_config_manager can now be set to nil, and it will work fine

v0.3.0
2009-05-07
Refactor: got rid of NetzkeLayout model, now all layouts are stored in netzke_preferences
New: persistent_config now has a method for_widget that accepts a block
autotest compatibility
New: String#to_b converts a string to true/false
New: Netzke::Base.session introduced for session data
New: weak_children_config and strong_children_config can now be declared by a widget, which specifies weak and strong configuration that every child of this widget will receive (e.g. display/hide configuration tool)
Fix: (degradation) flash message is now shown again in case of erroneous attempt to load a widget
New: widgets now can check session[:netzke_just_logged_in] and session[:netzke_just_logged_out] automatically set by Netzke after login/logout

v0.2.11
Introduction of getOwnerWidget()-method to Ext.Component. It provides the Netzke widget this Component belongs to.

v0.2.10
Removed dependency on 'json' gem.
Rails v2.3.2 compatibility.

v0.2.9
Actions, toolbars and tools reworked for easier configuration.
Menus introduced (based on actions).
Significant code clean-up.
Bug fix (nasty one): Ext.widgetMixIn was getting messed up along with dynamic widget loading.
Must work in IE now.

v0.2.8